# discord_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
bot/: core.py  main.py  requirements.txt
bot/commands/: perms.py  ping.py  reaction_roles.py  roles.py
bot/modules/: __init__.py  helper.py  reaction_roles.py
